# Cursovaya_7

./: .env.sample  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
habits/: models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_and_more.py  0003_user_tg_chat_id.py
